<resources>
    <string name="app_name">Cryptem</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="donate">Donate</string>
    <string name="send">Send</string>
    <string name="retry">Retry</string>

    <string name="about">About</string>
    <string name="add_poi">Add new merchant</string>

    <string name="favorites">Favorites</string>

    <string name="nav_pay">Pay</string>
    <string name="nav_map">Map</string>
    <string name="nav_request">Request</string>
    <string name="nav_prices">Market</string>
    <string name="nav_portfolio">Portfolio</string>

    <string name="request_title">Request payment</string>
    <string name="request_amount_hint">Amount</string>
    <string name="request_currency_hint">Currency</string>

    <string name="pay_sw_wallet_warning">Software wallets are suitable for small payments. Higher balances should always be kept in Trezor.</string>

    <string name="trezor_title">Buy Trezor</string>
    <string name="trezor_description">Nothing protects your cryptocurrencies better than a hardware wallet. With Trezor you can be sure your private keys are safe. </string>
    <string name="trezor_one" translatable="false" >Trezor One</string>
    <string name="trezor_t" translatable="false" >Trezor Model T</string>

    <string name="format_crypto_amount" translatable="false" >%.8f %s</string>
    <string name="format_crypto_amount_string" translatable="false" >%s %s</string>
    <string name="format_rate" translatable="false" >1 %s = %s</string>
    <string name="request_no_addresses">Add your %s wallet to your app to generate a QR code for payment.</string>
    <string name="request_dont_have_wallet">I don\'t have a wallet</string>
    <string name="request_have_wallet">I have a wallet</string>

    <string name="wallets_title">My wallets</string>

    <string name="wallet_title">Wallet details</string>
    <string name="wallet_name">Wallet name</string>
    <string name="wallet_public_address">Public adress</string>
    <string name="wallet_remove_dialog">Do you really want to remove your wallet?</string>
    <string name="wallet_scan_warning">Double-check your address before saving.</string>
    <string name="scan_address_prompt">Scan your public %s address.</string>

    <string name="format_rank" translatable="false" >%d.</string>

    <string name="time_day" translatable="false" >24h</string>
    <string name="time_week" translatable="false" >7d</string>
    <string name="time_month" translatable="false" >30d</string>
    <string name="time_year" translatable="false" >1y</string>
    <string name="time_ath" translatable="false" >ATH</string>

    <string name="usd" translatable="false" >$</string>
    <string name="btc" translatable="false" >₿</string>

    <string name="portfolio_deposit_hint">Sum of deposits</string>
    <string name="portfolio_empty">You don\'t have any coins in your portfolio yet.</string>
    <string name="portfolio_edit_exchange_amount">On exchange</string>
    <string name="portfolio_edit_wallet_amount">In Trezor</string>

    <string name="portfolio_exchange_warning">You have %s of your portfolio on exchanges, move your funds to safety.</string>

    <string name="portfolio_settings_title">Portfolio Settings</string>
    <string name="portfolio_settings_binance_sync">Sync balances from Binance</string>
    <string name="portfolio_settings_binance_api_key" translatable="false">API Key</string>
    <string name="portfolio_settings_binance_secret_key" translatable="false">Secret Key</string>
    <string name="portfolio_settings_binance_keys_hint">You can find your keys on Binance in API Management.</string>
    <string name="portfolio_settings_scan_binance_api_key">Scan your Binance API Key</string>
    <string name="portfolio_settings_binance_test_success">Successfully connected!</string>
    <string name="portfolio_settings_binance_test_failed">Connection failed, check the keys and try again.</string>

    <string name="portfolio_transaction_title">Transaction</string>
    <string name="portfolio_deposit">Deposit</string>
    <string name="portfolio_withdraw">Withdrawal</string>
    <string name="portfolio_amount">Amount (%s)</string>

    <string name="portfolio_search_coins">Search in TOP %d</string>

    <string name="coin_ath">All Time High</string>
    <string name="coin_marketcap">Marketcap</string>
    <string name="coin_date">Date</string>
    <string name="coin_trade_to_btc" translatable="false" >BTC</string>
    <string name="coin_trade_to_usdt" translatable="false" >USDT</string>
    <string name="coingecko" translatable="false" >Coin Gecko</string>
    <string name="simple_coin" translatable="false" >Simple Coin</string>
    <string name="buy">Buy</string>

    <string name="coin_current_price">Current Price</string>
    <string name="coin_sale">Sale</string>
    <string name="coin_chart">Chart</string>
    <string name="edit_amounts">Edit amounts</string>

    <string name="market_btc_dominance" translatable="false" >BTC %s</string>
    <string name="market_eth_dominance" translatable="false" >ETH %s</string>
    <string name="market_altcoin_index" translatable="false">Altcoin Season: %s</string>
    <string name="market_fear_and_greed_index" translatable="false">Fear &amp; Greed: %s</string>
    <string name="market_marketcap">Marketcap: %s</string>
    <string name="load_error">Load data failed, check your connection and try again.</string>

    <string name="favorites_empty">You haven\'t got any favorites yet.\nAdd coins to favorites by long press.</string>

    <string name="binance_dialog_title">Binance Exchange</string>
    <string name="binance_dialog_message">Do you already own an account at the largest crypto exchange Binance?</string>

    <string name="poi_editor_title">Add new merchant</string>
    <string name="poi_editor_instructions">Do you know any business or enterprise where they accept cryptocurrencies? Share it with others and add them to the map.</string>
    <string name="poi_editor_gmaps_instructions_1">1) Find a merchant in Google Maps.</string>
    <string name="poi_editor_gmaps_instructions_2">2) Long press on address to copy it to the clipboard. </string>
    <string name="poi_editor_gmaps_instructions_3">3) Click the "Share" button and select Cryptem.</string>
    <string name="poi_editor_checkbox">I\'m sure this merchant is accepting the crypto.</string>
    <string name="poi_editor_address_hint">Merchant address</string>
    <string name="poi_editor_category_hint">Category</string>
    <string name="poi_editor_google_maps">Go to Google Map</string>
    <string name="poi_editor_address_not_found_title">Unknown address</string>
    <string name="poi_editor_address_not_found_message">Failed to get GPS coordinates from the specified address, try to specify it. If the problem persists, please try again later.</string>
    <string name="poi_editor_success_title">Thank you</string>
    <string name="poi_editor_success_message">Place has been submitted and waiting for approval.</string>

    <string name="map_unsupported_country_title">We are not here yet</string>
    <string name="map_unsupported_country_message">Country %s is not supported yet, but we are working hard on it!</string>
    <string name="map_search">Search</string>
    <string name="map_type">Map type</string>

    <string name="about_license">Open-Source License GNU GPL v3.0</string>
    <string name="about_url">https://cryptem.io</string>
    <string name="about_support_us_title">Do you like the app?</string>
    <string name="about_support_us">We want to keep it free and without annoying ads. So every donate for future development is much appreciated. Thanks a lot!</string>
    <string name="about_copied">%s address copied to clipboard.</string>
    <string name="about_partners">Partners</string>
    <string name="report_poi">Report problem</string>
    <string name="report_poi_description">Tell us, what\'s wrong with this POI.</string>
    <string name="report_poi_note">Problem description</string>
    <string name="report_poi_type">Problem type</string>
    <string name="report_poi_type_discontinued">Permanently Closed</string>
    <string name="report_poi_type_wrong_location">Wrong Location</string>
    <string name="report_poi_type_not_accepting_crypto">Not accepting crypto</string>
    <string name="report_poi_type_other">Other problem</string>
    <string name="poi_report_ok">Thank you for your report.</string>
    <string name="poi_report_error">Something went wrong, please try again later.</string>

</resources>