<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="io.cryptem.app.ui.portfolio.settings.PortfolioSettingsVM" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:elevation="2dp"
        android:gravity="center"
        android:minHeight="@dimen/portfolio_header_min_height"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:theme="@style/HodlTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDeposit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/portfolio_deposit_hint"
            android:minWidth="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDeposit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@={vm.deposit}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCurrency"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.54"
            android:hint="@string/request_currency_hint"
            android:inputType="none">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:data="@{vm.currencies}"
                app:layoutId="@{@layout/item_currency_dropdown}"
                app:selectedItem="@={vm.currency}" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/textBinanceSyncTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/screen_padding"
        android:paddingEnd="@dimen/screen_padding"
        android:checked="@={vm.binanceSync}"
        android:onClick="@{() -> vm.onSwitchClick()}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/portfolio_settings_binance_sync"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputBinanceApiKey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/portfolio_settings_binance_api_key"
        android:minWidth="100dp"
        android:enabled="@{vm.binanceSync}"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBinanceSyncTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editBinanceApiKey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="64dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:text="@={vm.binanceApiKey}" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="56dp"
        android:layout_height="58dp"
        style="@style/ImageButton.Outlined"
        app:iconGravity="textStart"
        android:enabled="@{vm.binanceSync}"
        app:iconPadding="0dp"
        app:icon="@drawable/ic_scan_qr"
        tools:iconTint="@color/black"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:onClick="@{() -> vm.scanBinanceApiKey()}"
        app:layout_constraintEnd_toEndOf="@+id/inputBinanceApiKey"
        app:layout_constraintTop_toTopOf="@+id/inputBinanceApiKey" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputBinanceSecretKey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding"
        android:layout_weight="1"
        android:enabled="@{vm.binanceSync}"
        android:hint="@string/portfolio_settings_binance_secret_key"
        android:minWidth="100dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBinanceApiKey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editBinanceSecretKey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLines="1"
            android:text="@={vm.binanceSecretKey}" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBinanceSecretKey"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/textSecondary"
        android:text="@string/portfolio_settings_binance_keys_hint"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>